--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
@@ -33,5 +34,6 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Dates = "1.11.0"
+NPZ = "0.4.3"
 ParameterSchedulers = "0.4.2"
 Statistics = "1.11.1"
