--- a/julia_solver/Project.toml
+++ b/julia_solver/Project.toml
@@ -10,6 +10,7 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
@@ -27,6 +28,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 Dates = "1.11.0"
+Format = "1.3.7"
 NPZ = "0.4.3"
 ParameterSchedulers = "0.4.2"
 Statistics = "1.11.1"
