--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Not Yet Determined
+site_name: ML + Data Assimilation
 
 site_url: https://jaeminoh.github.io/DALS
 repo_url: https://github.com/jaeminoh/DALS
