--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,16 @@ authors = [
 ]
 urls = {repository = "https://github.com/jaeminoh/ODA" }
 dependencies = [
+    "beartype>=0.20.2",
+    "diffrax>=0.7.0",
     "equinox>=0.11.12",
-    "jax==0.5.0",
+    "fire>=0.7.0",
+    "jax[cuda]==0.5.0",
     "jaxopt>=0.8.3",
     "matplotlib>=3.10.1",
     "optax>=0.2.4",
+    "pre-commit>=4.2.0",
+    "ruff>=0.11.5",
     "tqdm>=4.67.1",
 ]
 
