--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "diffrax>=0.7.0",
     "equinox>=0.11.12",
     "fire>=0.7.0",
+    "ipykernel>=6.29.5",
     "jax[cuda]==0.5.0",
     "jaxopt>=0.8.3",
     "matplotlib>=3.10.1",
