--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,16 @@ dependencies = [
     "equinox>=0.11.12",
     "fire>=0.7.0",
     "ipykernel>=6.29.5",
+    "jax-cfd>=0.2.1",
     "jax[cuda]==0.5.0",
     "jaxopt>=0.8.3",
     "matplotlib>=3.10.1",
     "optax>=0.2.4",
     "pre-commit>=4.2.0",
     "ruff>=0.11.5",
+    "seaborn>=0.13.2",
     "tqdm>=4.67.1",
+    "xarray>=2025.4.0",
 ]
 
 [tool.setuptools]
